Fixed horizontal scroll

--- a/Application/API/site-creator/sample/themes/first/assets/css/main.css
+++ b/Application/API/site-creator/sample/themes/first/assets/css/main.css
@@ -59,7 +59,7 @@ svg {
     top: 53%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 340px;
+    max-width: 100%;
 }
 
 .wrapper-main {
